[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
ratatui = { version = "0.23.0", features = ["all-widgets"]}
crossterm = { version = "0.27" }
clap = { version = "4.4.1", features = ["derive"] }

[features]
profile = []